<resources>
    <string name="app_name">ShareToGo</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="usar">Usar</string>
    <string name="compartir">Compartir</string>
    <string name="map">Map</string>
    <string name="infoList">Info List</string>
    <string name="norte">Norte</string>
    <string name="centro">Centro</string>
    <string name="sur">Sur</string>
    <string name="salida">Sector salida</string>
    <string name="llegada">Sector llegada</string>
    <string name="continuar">Continuar</string>
    <string name="rutas">Rutas disponibles</string>
    <string name="carolina">la Carolina</string>
    <string name="sanCarlos">San Carlos</string>
    <string name="rutaA">Ruta A</string>
    <string name="rutaB">Ruta B</string>
    <string name="rutaC">Ruta C</string>
    <string name="rutaD">Ruta D</string>
    <string name="accionEjecutada">Información del conductor</string>
    <string name="calles">Calles</string>
    <string name="horario">Horario</string>
    <string name="publicar">Publicar</string>
    <string name="facebook_app_id">535477337302736</string>
    <string name="fb_login_protocol_scheme">fb535477337302736</string>
    <string name="email">Ingrese su email</string>
    <string name="password">Ingrese su contraseña</string>
    <string name="Nombre">Ingrese su nombre</string>
    <string name="telefono">Ingrese su numero celular</string>
    <string name="menu_item_home">Principal</string>
    <string name="menu_item_account">Cuenta</string>
    <string name="menu_item_logout">Cerrar Sesión</string>
    <string name="title_activity_mapa">Map</string>
    <string name="info_driver_phone">Telefono: </string>
    <string name="btnAnadirCalles">+</string>
    <string name="textViewInformacion">Por favor ingrese  el nombre de las calles en orden que se realizará el viaje.</string>
    <string name="hora">Seleccione la hora de inicio de la ruta</string>
    <string name="pasajeros">Ingrese el numero de pasajeros que puede llevar</string>
    <string name="sectorInicio">Ingrese el sector de salida</string>
    <string name="sectorFin">ingrese el sector de llegada</string>
    <string name="informacionAdicional">Informacion sobre su vehiculo</string>
    <string name="marca">Ingrese la marca</string>
    <string name="modelo">Ingrese el modelo</string>
    <string name="placa">Ingrese la placa</string>
    <string name="color">Ingrese el color</string>
    <string name="txtSentidoSalida">Sentido de Salida</string>
    <string name="txtSentidoLlegada">Sentido de llegada</string>
    <string name="txtHoraInicio">Hora de Inicio</string>
    <string name="txtNumeroPasajeros">Numero de Pasajeros</string>
    <string name="txtSectorSalida">Sector de salida</string>
    <string name="txtSectorLlegada">Sector de Llegada</string>
    <string name="textViewTituloMarca">Marca</string>
    <string name="textViewTituloModelo">Modelo</string>
    <string name="textViewTituloPlaca">Placa</string>
    <string name="textViewTituloColor">Color</string>
    <string name="btnAceptaPublicacion">Aceptar</string>
    <string name="textViewTituloListaCalles">Listado de calles</string>
    <string name="info_driver_email">Correo: </string>
    <string name="info_driver_name">Nombre: </string>
    <string name="info_route_capacity">Capacidad: </string>
    <string name="info_route_car_color">Color del auto: </string>
    <string name="info_route_hour">Hora: </string>
    <string name="info_route_passengers">Pasajeros: </string>
    <string name="info_route_car_id">Placa del auto: </string>
    <string name="info_route_car_model">Marca del auto: </string>
    <string name="info_route_sector_ini">Sector de salida: </string>
    <string name="info_route_sector_end">Sector de llegada: </string>
    <string name="info_route_direction">Sentido: </string>
    <string name="info_route_streets">Calles: </string>
    <string name="account_name">Nombre: </string>
    <string name="account_email">Correo: </string>
    <string name="account_phone">Teléfono: </string>
    <string name="account_password">Contraseña: </string>
    <string name="account_confirm_password">Confirmacion de contraseña: </string>
    <string name="account_button_save">Guardar</string>

</resources>
