<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seleccionSectores">

    <CheckBox
        android:id="@+id/checkBoxSalidaN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/norte"
        app:layout_constraintEnd_toEndOf="@+id/textViewSectorSalida"
        app:layout_constraintStart_toStartOf="@+id/textViewSectorSalida"
        app:layout_constraintTop_toBottomOf="@+id/textViewSectorSalida" />

    <CheckBox
        android:id="@+id/checkBoxSalidaC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/centro"
        app:layout_constraintStart_toStartOf="@+id/checkBoxSalidaN"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSalidaN" />

    <CheckBox
        android:id="@+id/checkBoxSalidaS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sur"
        app:layout_constraintStart_toStartOf="@+id/checkBoxSalidaC"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSalidaC" />

    <CheckBox
        android:id="@+id/checkBoxLlegadaN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/norte"
        app:layout_constraintEnd_toEndOf="@+id/textViewSectorLlegada"
        app:layout_constraintStart_toStartOf="@+id/textViewSectorLlegada"
        app:layout_constraintTop_toBottomOf="@+id/textViewSectorLlegada" />

    <CheckBox
        android:id="@+id/checkBoxLlegadaC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/centro"
        app:layout_constraintStart_toStartOf="@+id/checkBoxLlegadaN"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxLlegadaN" />

    <CheckBox
        android:id="@+id/checkBoxLlegadaS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sur"
        app:layout_constraintStart_toStartOf="@+id/checkBoxLlegadaC"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxLlegadaC" />

    <TextView
        android:id="@+id/textViewSectorSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/salida"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSectorLlegada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/llegada"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSectorContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#8BC34A"
        android:onClick="onClickButtonSectorContinuar"
        android:text="@string/continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/hora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSalidaS" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pasajeros"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>