<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292626"
    tools:context=".pantallaPrincipal">

    <ImageButton
        android:id="@+id/imageButtonUsar"
        android:layout_width="321dp"
        android:layout_height="125dp"
        android:onClick="onClickButtonUsar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsar"
        app:srcCompat="@drawable/usar" />

    <TextView
        android:id="@+id/textViewUsar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/usar"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonCompartir"
        android:layout_width="308dp"
        android:layout_height="111dp"
        android:onClick="onClickButtonCompartir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCompartir"
        app:srcCompat="@drawable/compartir" />

    <TextView
        android:id="@+id/textViewCompartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/compartir"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonUsar" />

    <Button
        android:id="@+id/buttonMap"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="#8BC34A"
        android:onClick="onClickButtonMap"
        android:text="@string/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonCompartir" />

    <Button
        android:id="@+id/buttonInfoList"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="#8BC34A"
        android:text="@string/infoList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMap" />
</androidx.constraintlayout.widget.ConstraintLayout>